--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "install": "^0.13.0",
     "ngrok": "^5.0.0-beta.2",
     "node-fetch": "^2.6.11",
-    "npm": "^9.7.1"
+    "npm": "^9.7.1",
+    "prompt-sync": "^4.2.0"
   }
 }
